--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "server": "node server/server.js",
-    "server-dev": "nodemon server/server.js"
+    "server-dev": "nodemon Blue-ocean-backend server/server.js"
   },
   "dependencies": {
     "argon2": "^0.30.2",
