--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "argon2": "^0.30.2",
     "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "pg": "^8.8.0"
   },
   "devDependencies": {
